test/distributions/robust/arithmetic/reindexing/test_strided_reindex2.cyclic.good
test_strided_reindex2.chpl:7: error: halt reached - extent in dimension 1 does not match actual
